tests/ui/lint/snapshots/manual_time_since_parenthesized.snap
---
source: tests/ui/lint/mod.rs
---
  [info] Manual `time.Since`
   ╭─[test.lis:6:11]
 5 │   let t = time.Now()
 6 │   let _ = (time.Now()).Sub(t)
   ·           ─────────┬─────────
   ·                    ╰── can use `time.Since`
 7 │ }
   ╰────
  help: `time.Since(t)` is shorthand for `time.Now().Sub(t)` · code: [lint.manual_time_since]
