tests/ui/lint/snapshots/manual_time_until.snap
---
source: tests/ui/lint/mod.rs
---
  ● Manual `time.Until`
   ╭─[test.lis:6:11]
 5 │   let deadline = time.Now()
 6 │   let _ = deadline.Sub(time.Now())
   ·           ────────────┬───────────
   ·                       ╰── can use `time.Until`
 7 │ }
   ╰────
  help: `time.Until(deadline)` is shorthand for `deadline.Sub(time.Now())` · code: [lint.manual_time_until]
