tests/ui/lint/snapshots/manual_unwrap_or_else_effectful_default.snap
---
source: tests/ui/lint/mod.rs
---
  [warning] Manual unwrap_or
   ╭─[test.lis:8:11]
 7 │   let o: Option<int> = Some(1)
 8 │   let _ = match o {
   ·           ──┬──
   ·             ╰── can be simpler
 9 │     Some(v) => v,
   ╰────
  help: Replace this `match` with `.unwrap_or_else(...)` · code: [lint.manual_unwrap_or]
