tests/ui/lint/snapshots/manual_unwrap_or_panicking_default.snap
---
source: tests/ui/lint/mod.rs
---
  [info] Manual `unwrap_or`
   ╭─[test.lis:4:3]
 3 │   let o: Option<int> = Some(1)
 4 │   match o {
   ·   ──┬──
   ·     ╰── can be simpler
 5 │     Some(v) => v,
   ╰────
  help: Replace this `match` with `.unwrap_or_else(...)` · code: [lint.manual_unwrap_or]
