tests/ui/lint/snapshots/manual_waitgroup_go.snap
---
source: tests/ui/lint/mod.rs
---
  ● Manual `WaitGroup.Go`
   ╭─[test.lis:6:3]
 5 │   let wg = sync.WaitGroup {}
 6 │   wg.Add(1)
   ·   ────┬────
   ·       ╰── counts the next `task`
 7 │   task {
   ╰────
  help: Prefer `wg.Go(|| ...)`, which counts the task and starts it in one step and runs `Done` for you · code: [lint.manual_waitgroup_go]
